refactor: update contributing guidelines

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Equivalent Exchange Discord
-    url: https://discord.gg/xjv6DBc
+  - name: Discord
+    url: https://discord.gg/s7Jxz6Y
     about: Please ask and answer questions here.
